--- a/webApp/views/layout.ejs
+++ b/webApp/views/layout.ejs
@@ -29,7 +29,9 @@
     -->
 
     <!--STYLES-->
+    <link rel="stylesheet" href="/styles/bootstrap.min.css">
     <link rel="stylesheet" href="/styles/importer.css">
+    <link rel="stylesheet" href="/styles/portfolio-item.css">
     <!--STYLES END-->
   </head>
 
@@ -89,6 +91,9 @@
 
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/bootstrap.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/jquery.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
