--- a/webApp/views/layout.ejs
+++ b/webApp/views/layout.ejs
@@ -31,6 +31,7 @@
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/bootstrap.min.css">
     <link rel="stylesheet" href="/styles/importer.css">
+    <link rel="stylesheet" href="/styles/nav.css">
     <link rel="stylesheet" href="/styles/portfolio-item.css">
     <!--STYLES END-->
   </head>
