diseño de templates aun sin conectar a backend

--- a/webApp/views/contact.html
+++ b/webApp/views/contact.html
@@ -83,7 +83,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                   <li><a href="products.html">Collares</a></li>
                 </ul>
            </li>        
-            <li><a href="blog.html">Cultura</a></li>
+            <li><a href="cart.html">Contáctanos</a></li>
             <div class="clearfix"></div>
           </ul>
 		</div>			
@@ -95,45 +95,27 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 <div class="contact-section">
 					<div class="contact-section-head text-center">
-						<h3><span>T</span>u portal</h3>
-						<p>“Sube un artículo que tenga una realación cultural”</p>
+						<h3><span>C</span>ontáctanos</h3>
+						<p>“Colabora con alguna campaña”</p>
 					</div>
 					<div class="contact-form-main">
 						<form>
 							<label class="span1"></label>
-							<input type="text" class="text" value="Nombre del Producto" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name...';}">
+							<input type="text" class="text" value="Nombre..." onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name...';}">
 							<label class="span2"></label>
 							<label class="span3"></label>
-							<input type="text" class="text" value="Costo" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email...';}">
+							<input type="text" class="text" value="Correo..." onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email...';}">
 							<label class="span4"></label>
 							<label class="span5"></label>
-							<input type="text" class="text" value="Stock" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Phone...';}">
+							<input type="text" class="text" value="Teléfono..." onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Phone...';}">
 							<label class="span6"></label>
 							<label class="span7"></label>
-							<textarea onfocus="if(this.value == 'Descripción ...') this.value='';" onblur="if(this.value == '') this.value='Your Message';" >Descripción</textarea>
-
-							<label class="control-label">Subir Imagen</label>
-							<input id="input-1" type="file" class="file">
-							<!--
-							<label class="control-label">Select File</label>
-<input id="input-44" name="input44[]" type="file" multiple class="file-loading">
-<script>
-$(document).on('ready', function() {
-    $("#input-44").fileinput({
-        uploadUrl: '/file-upload-batch/2',
-        maxFilePreviewSize: 10240
-    });
-});
-</script>
--->
-
+							<textarea onfocus="if(this.value == 'Mensaje ...') this.value='';" onblur="if(this.value == '') this.value='Your Message';" >Message...</textarea>
 							<label class="span8"></label>
 							<input type="submit" value="">
-
 						</form>
 					</div>
 
 			</div>
-
 </body>
 </html>
