--- a/webApp/views/layout.ejs
+++ b/webApp/views/layout.ejs
@@ -29,10 +29,14 @@
     -->
 
     <!--STYLES-->
+    <link rel="stylesheet" href="/styles/bootstrap.css">
     <link rel="stylesheet" href="/styles/bootstrap.min.css">
+    <link rel="stylesheet" href="/styles/etalage.css">
+    <link rel="stylesheet" href="/styles/form.css">
     <link rel="stylesheet" href="/styles/importer.css">
     <link rel="stylesheet" href="/styles/nav.css">
     <link rel="stylesheet" href="/styles/portfolio-item.css">
+    <link rel="stylesheet" href="/styles/style.css">
     <!--STYLES END-->
   </head>
 
@@ -94,7 +98,15 @@
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/bootstrap.js"></script>
     <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/classie.js"></script>
+    <script src="/js/easyResponsiveTabs.js"></script>
+    <script src="/js/jquery.easydropdown.js"></script>
+    <script src="/js/jquery.etalage.min.js"></script>
     <script src="/js/jquery.js"></script>
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/jquery.mixitup.min.js"></script>
+    <script src="/js/scripts.js"></script>
+    <script src="/js/uisearch.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
