--- a/webApp/views/signin.ejs
+++ b/webApp/views/signin.ejs
@@ -51,7 +51,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</script>
 					-->
 					<!-- //search-scripts -->
-
 					<a href="cart.html"><i class="cart"></i></a>
 				</div>
 			<div class="navigation">	
@@ -88,52 +87,76 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           </ul>
 		</div>			
 	 </div>
-			</div>
+		<!-- start login -->
+	<div class="container">
+		
+			   </div>
 
 
+		<div class="login-wrap">
+    <div class="login-html">
+        <input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">Inicia</label>
+        <input id="tab-2" type="radio" name="tab" class="sign-up"><label for="tab-2" class="tab">Regístrate</label>
+        <div class="login-form">
+            <div class="sign-in-htm">
+                <div class="group">
+                    <label for="user" class="label">Usuario</label>
+                    <input id="user" type="text" class="input">
+                </div>
+                <div class="group">
+                    <label for="pass" class="label">Contraseña</label>
+                    <input id="pass" type="password" class="input" data-type="password">
+                </div>
+                <div class="group">
+                    <input id="check" type="checkbox" class="check" checked>
+                    <label for="check"><span class="icon"></span> Mantenerme  iniciado</label>
+                </div>
+                <div class="group">
+                    <input type="submit" class="button" value="Inicia Sesión">
+                </div>
+                <div class="hr"></div>
+                <div class="foot-lnk">
+                    <a href="#forgot">¿Olvidaste tu contraseña?</a>
+                </div>
+            </div>
+            <div class="sign-up-htm">
+                <div class="group">
+                    <label for="user" class="label">Usuario</label>
+                    <input id="user" type="text" class="input">
+                </div>
+                <div class="group">
+                    <label for="user" class="label">Nombre</label>
+                    <input id="user" type="text" class="input">
+                </div>
+                <div class="group">
+                    <label for="pass" class="label">Contraseña</label>
+                    <input id="pass" type="password" class="input" data-type="password">
+                </div>
+                <div class="group">
+                    <label for="pass" class="label">Repetir Contraseña</label>
+                    <input id="pass" type="password" class="input" data-type="password">
+                </div>
+                <div class="group">
+                    <label for="pass" class="label">Correo</label>
+                    <input id="pass" type="text" class="input">
+                </div>
+                <div class="group">
+                    <input type="submit" class="button" value="Inicia Sesión">
+                </div>
+                <div class="hr"></div>
+               
+            </div>
+        </div>
+    </div>
+</div>
 
 
-<div class="contact-section">
-					<div class="contact-section-head text-center">
-						<h3><span>T</span>u portal</h3>
-						<p>“Sube un artículo que tenga una realación cultural”</p>
-					</div>
-					<div class="contact-form-main">
-						<form>
-							<label class="span1"></label>
-							<input type="text" class="text" value="Nombre del Producto" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name...';}">
-							<label class="span2"></label>
-							<label class="span3"></label>
-							<input type="text" class="text" value="Costo" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email...';}">
-							<label class="span4"></label>
-							<label class="span5"></label>
-							<input type="text" class="text" value="Stock" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Phone...';}">
-							<label class="span6"></label>
-							<label class="span7"></label>
-							<textarea onfocus="if(this.value == 'Descripción ...') this.value='';" onblur="if(this.value == '') this.value='Your Message';" >Descripción</textarea>
-
-							<label class="control-label">Subir Imagen</label>
-							<input id="input-1" type="file" class="file">
-							<!--
-							<label class="control-label">Select File</label>
-<input id="input-44" name="input44[]" type="file" multiple class="file-loading">
-<script>
-$(document).on('ready', function() {
-    $("#input-44").fileinput({
-        uploadUrl: '/file-upload-batch/2',
-        maxFilePreviewSize: 10240
-    });
-});
-</script>
--->
-
-							<label class="span8"></label>
-							<input type="submit" value="">
-
-						</form>
-					</div>
-
-			</div>
-
+		
+				<div class="footer-social-icons">
+					<a href="#"><i class="fb"></i></a>
+					<a href="#"><i class="tw"></i></a>
+					<a href="#"><i class="in"></i></a>
+					<a href="#"><i class="pt"></i></a>
+				</div>
 </body>
 </html>
