--- a/webApp/views/cart.ejs
+++ b/webApp/views/cart.ejs
@@ -18,18 +18,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- dropdown -->
 <script src="js/jquery.easydropdown.js"></script>
 <link href="css/nav.css" rel="stylesheet" type="text/css" media="all"/>
-		 <script src="js/scripts.js" type="text/javascript"></script>
+         <script src="js/scripts.js" type="text/javascript"></script>
 </head>
 <body>
-	<!-- header-section-starts -->
-	<div class="header" id="home">
-		<div class="top-header">
-			<div class="container">
-			<div class="logo">
-				<a href="index.html"><img src="images/logo.png" alt="" /></a>
-			</div>
-				<div class="header-top-right">
-				<!-- start search-->
+    <!-- header-section-starts -->
+    <div class="header" id="home">
+        <div class="top-header">
+            <div class="container">
+            <div class="logo">
+                <a href="index.html"><img src="images/logo.png" alt="" /></a>
+            </div>
+                <div class="header-top-right">
+                <!-- start search-->
 				<!--
 				    <div class="search-box">
 					    <div id="sb-search" class="sb-search">
@@ -52,33 +52,33 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					-->
 					<!-- //search-scripts -->
 
-					<a href="cart.html"><i class="cart"></i></a>
-				</div>
-			<div class="navigation">	
-			<div>
+                    <a href="cart.html"><i class="cart"></i></a>
+                </div>
+            <div class="navigation">    
+            <div>
               <label class="mobile_menu" for="mobile_menu">
               <span>Menu</span>
               </label>
               <input id="mobile_menu" type="checkbox">
-				<ul class="nav">
+                <ul class="nav">
               <li class="active"><a href="index.html">Principal</a></li>                       
               <li class="dropdown1"><a href="#">Ropa</a>
                 <ul class="dropdown2">
                   <li><a href="products.html">Vestidos</a></li>
                   <li><a href="products.html">Pantalones</a></li>
-				  <li><a href="products.html">Playeras</a></li>
+                  <li><a href="products.html">Playeras</a></li>
                 </ul>
               </li>             
               <li class="dropdown1"><a href="#">Calzado</a>
-              	<ul class="dropdown2">
+                <ul class="dropdown2">
                   <li><a href="products.html">Chanclas</a></li>
                   <li><a href="products.html">Tennis</a></li>
-				  <li><a href="products.html">Zapatos</a></li>
+                  <li><a href="products.html">Zapatos</a></li>
                 </ul>
               </li>
            </li>           
            <li class="dropdown1"><a href="#">Accesorios</a>
-           	<ul class="dropdown2">
+            <ul class="dropdown2">
                   <li><a href="products.html">Bolsas</a></li>
                   <li><a href="products.html">Collares</a></li>
                 </ul>
@@ -86,54 +86,59 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <li><a href="blog.html">Cultura</a></li>
             <div class="clearfix"></div>
           </ul>
-		</div>			
-	 </div>
+        </div>          
+     </div>
+     </div>
+
+
+		<!-- start Contact-page -->
+	<!-- content-section-starts -->
+	<div class="container">
+<div class="dreamcrub">
+			   	 <ul class="breadcrumbs">
+				 
+                    <li class="home">
+                       <a href="index.html" title="Go to Home Page"><img src="images/home.png" alt=""/></a>&nbsp;
+                       <span>&gt;</span>
+                    </li>
+                    <li>
+                       Cart(0)
+                    </li>
+                </ul>
+                <ul class="previous">
+                	<li><a href="index.html">Back to Previous Page</a></li>
+                </ul>
+                <div class="clearfix"></div>
+			   </div>
+			   </div>
+
+<div class="container"><div class="coats sing-c text-center">
+			<h3 class="c-head">Your Shopping Cart(0)</h3>
+			<p>Lorem ipsum dolor sit amet enim. Etiam ullamcorp uspendisse a pellentesque.</p>
+			<p> Etiam ullamcorp uspendisse a pellentesque.Lorem ipsum dolor sit amet enim.</p>
+			<p>Your Bascket Is Empty Please Go <a href="products.html">here</a> And Shop</p>
+		</div>
+
+</div>
+
+	<!-- content-section-ends -->
+
+		<div class="footer">
+		<div class="up-arrow">
+			<a class="scroll" href="#home"><img src="images/up.png" alt="" /></a>
+		</div>
+			<div class="container">
+				<div class="copyrights">
+					<p>Copyright &copy; 2015 All rights reserved | Template by  <a href="http://w3layouts.com">  W3layouts</a></p>
+				</div>
+				<div class="footer-social-icons">
+					<a href="#"><i class="fb"></i></a>
+					<a href="#"><i class="tw"></i></a>
+					<a href="#"><i class="in"></i></a>
+					<a href="#"><i class="pt"></i></a>
+				</div>
+				  <div class="clearfix"></div>
 			</div>
-
-
-
-
-<div class="contact-section">
-					<div class="contact-section-head text-center">
-						<h3><span>T</span>u portal</h3>
-						<p>“Sube un artículo que tenga una realación cultural”</p>
-					</div>
-					<div class="contact-form-main">
-						<form>
-							<label class="span1"></label>
-							<input type="text" class="text" value="Nombre del Producto" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name...';}">
-							<label class="span2"></label>
-							<label class="span3"></label>
-							<input type="text" class="text" value="Costo" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email...';}">
-							<label class="span4"></label>
-							<label class="span5"></label>
-							<input type="text" class="text" value="Stock" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Phone...';}">
-							<label class="span6"></label>
-							<label class="span7"></label>
-							<textarea onfocus="if(this.value == 'Descripción ...') this.value='';" onblur="if(this.value == '') this.value='Your Message';" >Descripción</textarea>
-
-							<label class="control-label">Subir Imagen</label>
-							<input id="input-1" type="file" class="file">
-							<!--
-							<label class="control-label">Select File</label>
-<input id="input-44" name="input44[]" type="file" multiple class="file-loading">
-<script>
-$(document).on('ready', function() {
-    $("#input-44").fileinput({
-        uploadUrl: '/file-upload-batch/2',
-        maxFilePreviewSize: 10240
-    });
-});
-</script>
--->
-
-							<label class="span8"></label>
-							<input type="submit" value="">
-
-						</form>
-					</div>
-
-			</div>
-
+		</div>
 </body>
 </html>
