--- a/webApp/views/ListView.ejs
+++ b/webApp/views/ListView.ejs
@@ -3,12 +3,11 @@
   <head>
     <script src="/js/jquery.js" type="text/javascript"> </script>
     <meta charset="utf-8">
-    <title></title>
+    <title>acue</title>
   </head>
   <body>
     <div >
       <img src="" alt="">
-      <a href="#"></a>
       <p></p>
     </div>
     <div id="main_container">
@@ -28,10 +27,11 @@
 
                 $("#main_container").append(
                   '<div class="container" style="margin-bottom: 20px;">'+
-                    '<img src="'+res[alfa].direccionImagen+'"></img>'+
-                    '<h2 href="#" style=" text-align: center;">'+res[alfa].producto+'</h2>'+
+                    '<div class="text-center">'+'<img  class="img-circle" src="'
+                    +res[alfa].direccionImagen+'" heigth="300px" width="300px">'+'<a href= "id = '+res[alfa]+'">'+'</img>'+
+                    '<h2 href="#" style=" text-align: centers;">'+res[alfa].producto+'</h2>'+
                     '<h3 style=" text-align: center;">'+res[alfa].costo+'</h3>'+
-                    '<p style=" text-align: center;">'+res[alfa].descripcion+'</p>'+
+                    '<p style=" text-align: center;">'+res[alfa].descripcion+'</p>'+ '</div>'+
                   '</div>'
                 )
             }
