--- a/webApp/views/homepage.ejs
+++ b/webApp/views/homepage.ejs
@@ -54,7 +54,7 @@
             <!--
               <script src="js/classie.js"></script>
               <script src="js/uisearch.js"></script>
-
+///asddsfdsfsdfsdf
               	<script>
               		new UISearch( document.getElementById( 'sb-search' ) );
               	</script>
