diseño de templates 2

--- a/webApp/views/homepage.ejs
+++ b/webApp/views/homepage.ejs
@@ -32,7 +32,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="top-header">
 			<div class="container">
 			<div class="logo">
-				<a href="index.html"><img src="images/logo.png" alt="" /></a>
+				<a href="/"><img src="images/logo.png" alt="" /></a>
 			</div>
 				<div class="header-top-right">
 				<!-- start search-->
@@ -58,52 +58,52 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					-->
 					<!-- //search-scripts -->
 
-					<a href="cart.html"><i class="cart"></i></a>
-				</div>
-			<div class="navigation">	
-			<div>
+					 <a href="/carrito"><i class="cart"></i></a>
+                </div>
+            <div class="navigation">    
+            <div>
               <label class="mobile_menu" for="mobile_menu">
               <span>Menu</span>
               </label>
               <input id="mobile_menu" type="checkbox">
-				<ul class="nav">
-              <li class="active"><a href="index.html">Principal</a></li>                       
+                <ul class="nav">
+              <li class="active"><a href="/">Principal</a></li>                       
               <li class="dropdown1"><a href="#">Ropa</a>
                 <ul class="dropdown2">
-                  <li><a href="products.html">Vestidos</a></li>
-                  <li><a href="products.html">Pantalones</a></li>
-				  <li><a href="products.html">Playeras</a></li>
+                  <li><a href="/productos">Vestidos</a></li>
+                  <li><a href="/productos">Pantalones</a></li>
+                  <li><a href="/productos">Playeras</a></li>
                 </ul>
               </li>             
               <li class="dropdown1"><a href="#">Calzado</a>
-              	<ul class="dropdown2">
-                  <li><a href="products.html">Chanclas</a></li>
-                  <li><a href="products.html">Tennis</a></li>
-				  <li><a href="products.html">Zapatos</a></li>
+                <ul class="dropdown2">
+                  <li><a href="/productos">Chanclas</a></li>
+                  <li><a href="/productos">Tennis</a></li>
+                  <li><a href="/productos">Zapatos</a></li>
                 </ul>
               </li>
            </li>           
            <li class="dropdown1"><a href="#">Accesorios</a>
-           	<ul class="dropdown2">
-                  <li><a href="products.html">Bolsas</a></li>
-                  <li><a href="products.html">Collares</a></li>
+            <ul class="dropdown2">
+                  <li><a href="/products">Bolsas</a></li>
+                  <li><a href="/products">Collares</a></li>
                 </ul>
            </li>        
-            <li><a href="blog.html">Cultura</a></li>
+            <li><a href="/noticias">Cultura</a></li>
             <div class="clearfix"></div>
           </ul>
-		</div>			
-	 </div>
-			</div>
+        </div>          
+     </div>
+     </div>
 		</div>
 		<div class="banner">
 		<div class="signing text-right">
 			<div class="container">
 				<div class="sign-in">
-					<a href="signin.html">Accede</a>
+					<a href="inicio">Accede</a>
 				</div>
 				<div class="sign-up1">
-					<a href="vendedor.html">Portal</a>
+					<a href="panelvendedor">Portal</a>
 				</div>
 
 				<div class="clearfix"></div>
@@ -113,7 +113,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<i class="shipping"></i>
 				<h3>Comprando Cultura</h3>
 				<p>Conoce los productos tradicionales, la historia y Eventos de todas las culturas del mundo </p>
-				<a href="products.html">Conoce nuestra App</a>
+				<a href="/">Conoce nuestra App</a>
 		</div>
 	</div>
 	</div>
@@ -130,7 +130,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="lonovo">
 							<div class="dress">
 								<h4>Vestido tradicional de la India</h4>
-								<p>Fresca, confortable y bellamente bordada...<a href="blog.html" >Conoce mas </a></p>
+								<p>Fresca, confortable y bellamente bordada...<a href="/noticias" >Conoce mas </a></p>
 							</div>
 							<div class="priceindollers">
 								<h3>$ <span>689</span></h3>
