--- a/webApp/views/cart.ejs
+++ b/webApp/views/cart.ejs
@@ -21,38 +21,37 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
          <script src="js/scripts.js" type="text/javascript"></script>
 </head>
 <body>
-    <!-- header-section-starts -->
-    <div class="header" id="home">
+  <div class="header" id="home">
         <div class="top-header">
             <div class="container">
             <div class="logo">
-                <a href="index.html"><img src="images/logo.png" alt="" /></a>
+                <a href="/"><img src="images/logo.png" alt="" /></a>
             </div>
                 <div class="header-top-right">
                 <!-- start search-->
-				<!--
-				    <div class="search-box">
-					    <div id="sb-search" class="sb-search">
-							<form>
-								<input class="sb-search-input" placeholder="Enter your search term..." type="search" name="search" id="search">
-								<input class="sb-search-submit" type="submit" value="">
-								<span class="sb-icon-search"> </span>
-							</form>
-						</div>
-				    </div>
-				-->
-					<!-- search-scripts -->
-					<!--
-					<script src="js/classie.js"></script>
-					<script src="js/uisearch.js"></script>
-						
-						<script>
-							new UISearch( document.getElementById( 'sb-search' ) );
-						</script>
-					-->
-					<!-- //search-scripts -->
+                <!--
+                    <div class="search-box">
+                        <div id="sb-search" class="sb-search">
+                            <form>
+                                <input class="sb-search-input" placeholder="Enter your search term..." type="search" name="search" id="search">
+                                <input class="sb-search-submit" type="submit" value="">
+                                <span class="sb-icon-search"> </span>
+                            </form>
+                        </div>
+                    </div>
+                -->
+                    <!-- search-scripts -->
+                    <!--
+                    <script src="js/classie.js"></script>
+                    <script src="js/uisearch.js"></script>
+                        
+                        <script>
+                            new UISearch( document.getElementById( 'sb-search' ) );
+                        </script>
+                    -->
+                    <!-- //search-scripts -->
 
-                    <a href="cart.html"><i class="cart"></i></a>
+                    <a href="/carrito"><i class="cart"></i></a>
                 </div>
             <div class="navigation">    
             <div>
@@ -61,29 +60,29 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               </label>
               <input id="mobile_menu" type="checkbox">
                 <ul class="nav">
-              <li class="active"><a href="index.html">Principal</a></li>                       
+              <li class="active"><a href="/">Principal</a></li>                       
               <li class="dropdown1"><a href="#">Ropa</a>
                 <ul class="dropdown2">
-                  <li><a href="products.html">Vestidos</a></li>
-                  <li><a href="products.html">Pantalones</a></li>
-                  <li><a href="products.html">Playeras</a></li>
+                  <li><a href="/productos">Vestidos</a></li>
+                  <li><a href="/productos">Pantalones</a></li>
+                  <li><a href="/productos">Playeras</a></li>
                 </ul>
               </li>             
               <li class="dropdown1"><a href="#">Calzado</a>
                 <ul class="dropdown2">
-                  <li><a href="products.html">Chanclas</a></li>
-                  <li><a href="products.html">Tennis</a></li>
-                  <li><a href="products.html">Zapatos</a></li>
+                  <li><a href="/productos">Chanclas</a></li>
+                  <li><a href="/productos">Tennis</a></li>
+                  <li><a href="/productos">Zapatos</a></li>
                 </ul>
               </li>
            </li>           
            <li class="dropdown1"><a href="#">Accesorios</a>
             <ul class="dropdown2">
-                  <li><a href="products.html">Bolsas</a></li>
-                  <li><a href="products.html">Collares</a></li>
+                  <li><a href="/products">Bolsas</a></li>
+                  <li><a href="/products">Collares</a></li>
                 </ul>
            </li>        
-            <li><a href="blog.html">Cultura</a></li>
+            <li><a href="/noticias">Cultura</a></li>
             <div class="clearfix"></div>
           </ul>
         </div>          
