--- a/webApp/views/products.ejs
+++ b/webApp/views/products.ejs
@@ -68,46 +68,44 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					-->
 					<!-- //search-scripts -->
 
-					<a href="cart.html"><i class="cart"></i></a>
-				</div>
-			<div class="navigation">	
-			<div>
+					 <a href="/carrito"><i class="cart"></i></a>
+                </div>
+            <div class="navigation">    
+            <div>
               <label class="mobile_menu" for="mobile_menu">
               <span>Menu</span>
               </label>
               <input id="mobile_menu" type="checkbox">
-				<ul class="nav">
-              <li class="active"><a href="index.html">Principal</a></li>                       
+                <ul class="nav">
+              <li class="active"><a href="/">Principal</a></li>                       
               <li class="dropdown1"><a href="#">Ropa</a>
                 <ul class="dropdown2">
-                  <li><a href="products.html">Vestidos</a></li>
-                  <li><a href="products.html">Pantalones</a></li>
-				  <li><a href="products.html">Playeras</a></li>
+                  <li><a href="/productos">Vestidos</a></li>
+                  <li><a href="/productos">Pantalones</a></li>
+                  <li><a href="/productos">Playeras</a></li>
                 </ul>
               </li>             
               <li class="dropdown1"><a href="#">Calzado</a>
-              	<ul class="dropdown2">
-                  <li><a href="products.html">Chanclas</a></li>
-                  <li><a href="products.html">Tennis</a></li>
-				  <li><a href="products.html">Zapatos</a></li>
+                <ul class="dropdown2">
+                  <li><a href="/productos">Chanclas</a></li>
+                  <li><a href="/productos">Tennis</a></li>
+                  <li><a href="/productos">Zapatos</a></li>
                 </ul>
               </li>
            </li>           
            <li class="dropdown1"><a href="#">Accesorios</a>
-           	<ul class="dropdown2">
-                  <li><a href="products.html">Bolsas</a></li>
-                  <li><a href="products.html">Collares</a></li>
+            <ul class="dropdown2">
+                  <li><a href="/products">Bolsas</a></li>
+                  <li><a href="/products">Collares</a></li>
                 </ul>
            </li>        
-            <li><a href="blog.html">Cultura</a></li>
+            <li><a href="/noticias">Cultura</a></li>
             <div class="clearfix"></div>
           </ul>
-		</div>			
-	 </div>
-			</div>
-		</div>
-		</div>
-
+        </div>          
+     </div>
+     </div>
+</div>
 
 
 		<!-- start Dresses-page -->
